--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==3.2.8
 django-bootstrap4==3.0.1
 django-heroku==0.3.1
 djangorestframework==3.12.4
+gunicorn==20.1.0
 idna==3.3
 ipython==7.28.0
 jedi==0.18.0
